Update config files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.pyright]
 useLibraryCodeForTypes = true
-analyzeUnannotatedFunctions = false
+analyzeUnannotatedFunctions = true
 reportUnnecessaryCast = "information"
 reportUnusedExpression = false
 reportUnnecessaryTypeIgnoreComment = "information"
