--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "editor.quickSuggestionsDelay": 400,
   "python.analysis.autoImportCompletions": false,
   "python.languageServer": "None",
+  "ruff.nativeServer": true,
   "pyright.disableOrganizeImports": true,
   "notebook.codeActionsOnSave": {
     "notebook.source.organizeImports": "explicit"
